carousel Layout fixed, carouselContainer fixed, some carousels have been fixed, App's legibility is better now because an object has been implemented to dispose switch case

--- a/src/Components/Badges/Badge.css
+++ b/src/Components/Badges/Badge.css
@@ -1,13 +1,13 @@
 .badge-container{
-    width: 70%;
-    max-width: 400px;
+    width: 40%;
+    max-width: 200px;
     height: 13rem;
     display: flex;
     justify-content:space-evenly;
     align-items: center;
     flex-direction: column;
     border: 1px solid #dbdbdb;
-      border-radius: .375em;
+    border-radius: .375em;
     backdrop-filter: blur(10px);
     background: rgb(255, 255, 255);
     margin: 3px;
@@ -40,17 +40,17 @@
 
 @media screen and (width > 720px) {
     .badge-container{
-        width: 30%;
+        width: 40%;
     }
 }
 @media screen and (width > 1024px) {
     .badge-container{
-        width: 20%;
+        width: 30%;
     }
 }
 
 @media screen and (width > 1240px) {
     .badge-container{
-        width: 15%;
+        width: 25%;
     }
 }
