--- a/src/Layouts/Carousel/Carousel.css
+++ b/src/Layouts/Carousel/Carousel.css
@@ -123,110 +123,10 @@
   }
 }
 
-/*-------------------------Second Carousel------------------------*/
-.carousel-secondContent {
-  margin: 0 auto 0 auto;
-  perspective: 5000px;
-  height: 80px;
-}
-.carousel2 {
-  position: absolute;
-  scale: 0.32;
-  width: 320px;
-  height: 100px;
-  transform-style: preserve-3d;
-  animation: rotate360 60s infinite forwards linear;
-}
-.carousel2-image {
-  position: absolute;
-  width: 300px;
-  height: 140px;
-  top: 20px;
-  left: 10px;
-  right: 10px;
-  background-size: cover;
-  box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.5);
-  display: flex;
-  border: 1px solid rgba(0, 0, 0, 0.7);
-}
 
-.carousel2-image > span {
-  margin: auto;
-  font-size: 2rem;
-}
-
-@keyframes rotate360 {
-  from {
-    transform: rotateY(0deg);
-  }
-
-  to {
-    transform: rotateY(-360deg);
-  }
-}
-
-.carousel2-image:nth-child(1) {
-  background: lightblue;
-  transform: rotateY(0deg) translateZ(430px);
-}
-
-.carousel2-image:nth-child(2) {
-  background: lightblue;
-  transform: rotateY(40deg) translateZ(430px);
-}
-
-.carousel2-image:nth-child(3) {
-  background: lightblue;
-  transform: rotateY(80deg) translateZ(430px);
-}
-
-.carousel2-image:nth-child(4) {
-  background: lightblue;
-  transform: rotateY(120deg) translateZ(430px);
-}
-
-.carousel2-image:nth-child(5) {
-  background: lightblue;
-  transform: rotateY(160deg) translateZ(430px);
-}
-
-.carousel2-image:nth-child(6) {
-  background: lightblue;
-  transform: rotateY(200deg) translateZ(430px);
-}
-
-.carousel2-image:nth-child(7) {
-  background: lightblue;
-  transform: rotateY(240deg) translateZ(430px);
-}
-
-.carousel2-image:nth-child(8) {
-  background: lightblue;
-  transform: rotateY(280deg) translateZ(430px);
-}
-
-.carousel2-image:nth-child(9) {
-  background: lightblue;
-  transform: rotateY(320deg) translateZ(430px);
-}
-
-@media (width>= 768px){
-  .carousel2 {
-    scale: 0.62;
-  }
-  .carousel-secondContent {
-    height: 250px;
-  }
-}
 
 @media (width>= 1440px){
   .carouselLayout-container{
     flex-direction: row;
-  }
-  .carousel-content{
-    height: 300px;
-  }
-  .carousel2 {
-    scale: 0.72;
   }
 }
